--- a/app/src/main/res/menu/popup.xml
+++ b/app/src/main/res/menu/popup.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:title="Сфотографировать"
+        android:id="@+id/popup_onCamera"/>
+    <item
         android:title="Выбрать изображение на устройстве"
         android:id="@+id/popup_onDevice"/>
     <item
