Теперь все работает как нужно. Вся работа теперь осуществляется через item типа Data, в асинктаске все записывается в него и ничего не присваивается, а конкретно в адаптере происходит вся работа по присвоению вьюшкам соответсвующих элементов из item.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,8 +70,8 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <ListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -79,6 +79,6 @@
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/linearLayout">
 
-    </android.support.v7.widget.RecyclerView>
+    </ListView>
 
 </RelativeLayout>
