--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -14,7 +14,7 @@
 
         <ImageView
             android:id="@+id/itemProgress_previewImage"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
